--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "mdx-bundler": "^10.0.2",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
-    "next-translate": "^2.6.2",
+    "next-translate-plugin": "^2.6.2",
     "plaiceholder": "^3.0.0",
     "prism-react-renderer": "^2.3.1",
     "prismjs": "^1.29.0",
